--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 Django==2.0
+django-cors-headers==2.1.0
+django-filter==1.1.0
+djangorestframework==3.7.7
+djangorestframework-jwt==1.11.0
+docutils==0.14
+Markdown==2.6.10
+PyJWT==1.5.3
 pytz==2017.3
-djangorestframework
-markdown
-django-filter
-djangorestframework-jwt
-django-cors-headers
