--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-django-debug-toolbar
 Django==2.0
 django-cors-headers==2.1.0
+django-debug-toolbar==1.9.1
 django-filter==1.1.0
 djangorestframework==3.7.7
 djangorestframework-jwt==1.11.0
@@ -8,3 +8,4 @@ docutils==0.14
 Markdown==2.6.10
 PyJWT==1.5.3
 pytz==2017.3
+sqlparse==0.2.4
